--- a/src/luaconf.h.in
+++ b/src/luaconf.h.in
@@ -492,7 +492,9 @@
 ** without modifying the main part of the file.
 */
 
-
+#if !defined(getlocaledecpoint)
+#define getlocaledecpoint() ('.') //Code-monkey style
+#endif
 
 #endif
 
