--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,13 +51,13 @@ if ( WIN32 AND NOT CYGWIN )
   string ( REPLACE "/" ${LUA_DIRSEP} LUA_CPATH_DEFAULT "${LUA_CPATH_DEFAULT}" )
 else ( )
   # Posix systems (incl. Cygwin)
-  option ( LUA_USE_POSIX "Use POSIX features." ON )
-  option ( LUA_USE_DLOPEN "Use dynamic linker to load modules." ON )
-  option ( LUA_USE_MKSTEMP "Use mkstep." ON )
-  option ( LUA_USE_ISATTY "Use tty." ON )
-  option ( LUA_USE_POPEN "Use popen." ON )
-  option ( LUA_USE_ULONGJMP "Use ulongjmp" ON )
-  option ( LUA_USE_GMTIME_R "Use GTIME_R" ON )
+  option ( LUA_USE_POSIX "Use POSIX features." OFF )
+  option ( LUA_USE_DLOPEN "Use dynamic linker to load modules." OFF )
+  option ( LUA_USE_MKSTEMP "Use mkstep." OFF )
+  option ( LUA_USE_ISATTY "Use tty." OFF )
+  option ( LUA_USE_POPEN "Use popen." OFF )
+  option ( LUA_USE_ULONGJMP "Use ulongjmp" OFF )
+  option ( LUA_USE_GMTIME_R "Use GTIME_R" OFF )
   # Apple and Linux specific
   if ( LINUX OR APPLE )
     option ( LUA_USE_STRTODHEX "Assume 'strtod' handles hexa formats" ON )
